<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/wf_common_match"
    android:padding="0dp">

    <include layout="@layout/view_common_header_strip" />


    <LinearLayout
        style="@style/cs_common_match"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/wf_margin_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/tc_text_white_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/wf_app_color_base"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:text="@string/fragment_mypage_user_info"
                android:textColor="@color/chiase_white"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/wf_margin_10"
                android:layout_marginTop="@dimen/wf_margin_10"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <trente.asia.thankscard.services.rank.view.RoundedImageView
                        android:id="@+id/img_fragment_mypage_avatar"
                        android:layout_width="@dimen/margin_64dp"
                        android:layout_height="@dimen/margin_64dp"
                        android:src="@drawable/wf_profile" />

                    <TextView
                        style="@style/tc_text_black_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_fragment_mypage_rank_post"
                        style="@style/tc_text_black_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/fragment_mypage_rank_post"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_fragment_mypage_rank_post2"
                        style="@style/tc_text_black_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/fragment_mypage_rank_next_post"
                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/txt_fragment_mypage_rank_receive"
                        style="@style/tc_text_black_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/fragment_mypage_rank_receive"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_fragment_mypage_rank_receive2"
                        style="@style/tc_text_black_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/fragment_mypage_rank_next_receive"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <trente.asia.thankscard.services.rank.view.RoundedImageView
                        android:id="@+id/img_fragment_mypage_rank_stage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/tc_rank_regular" />
                    <TextView
                        android:id="@+id/txt_rank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tc_rank_regular"
                        android:textSize="14sp"
                        android:textColor="@color/chiase_black"/>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_fragment_mypage_post"
                    style="@style/tc_button_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_64dp"
                    android:layout_marginRight="@dimen/margin_64dp"
                    android:layout_weight="1"
                    android:text="@string/fragment_mypage_btn_post" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="@dimen/wf_margin_16"
            android:orientation="vertical">

            <TextView
                style="@style/tc_text_white_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/wf_app_color_base"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:text="@string/fragment_mypage_note_list"
                android:textColor="@color/chiase_white"
                android:textSize="12sp" />

            <ListView
                android:id="@+id/lst_fragment_mypage_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/view_common_footer" />


</LinearLayout>
