<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:custome="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_vertical|center_horizontal"
              android:orientation="vertical">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    custome:ignore="UselessParent">


        <ImageView
            android:id="@+id/img_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/lnr_thanks_card_frame_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/chiase_white"
            android:baselineAligned="false"
            android:gravity="center_vertical|left"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/txt_tc_detail_date"
                style="@style/tc_text_card_frame_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_tc_detail_date"/>

            <TextView
                android:id="@+id/txt_tc_detail_to"
                style="@style/tc_text_card_frame_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_tc_detail_to"/>

            <TextView
                android:id="@+id/txt_tc_detail_from"
                style="@style/tc_text_card_frame_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/fragment_tc_detail_from"/>
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
